front-end/Assets/src/css/orion/_orion-global.scss
/* ... */
@keyframes back-banner-animate {
    from {
        background-position: center 100%;
    }
    50% {
        background-position: center 150%;
    }
    to {
        background-position: center 100%;
    }
}


.horizontal-list{

    h5{
        font-weight:700;
        margin-bottom:20px;
        font-size:1em;
    }
    hr{
        margin-bottom:40px;
        margin-top:20px;
    }

    .upper-section{
      h3{
          margin-top: 50px;
      }  
    }
    @media(min-width:$break-md){ 
        .upper-section{
            width:60%;
        }
    }
    
}
//Orion back to top css
#backtotop {
    display: none;
    position: fixed;
    bottom: 15px;
    @media(min-width:$break-md){ 
        bottom: 30px;
    }    
    left: 0px;
    z-index: 99;
    border: none;
    outline: none;
    cursor: pointer;
    font-size: 14px;
    color: #1A98FF;
    width: 48px;
    background: #fff;
    text-align: center;
    font-weight: 700;
    padding: 10px;    
    box-shadow: 1px 2px 4px #000000;
    border-radius: 4px;
}
.orion-body{
    .maincontentcontainer > .layout-full-bleed > *:first-child > *:not([class*="bg-"]) {
        margin-top: 0px;
    }
    .experiencefragment.aem-GridColumn.aem-GridColumn--default--12 {
        padding-bottom: 0 !important;
    }
}
 


// product-list

.resource-card-list{
    background-color: #ffffff;
    
    .card{
        h2{
            line-height: 26px;  
            font-size: 20px !important;       
        }
        h5{
            font-weight: 600;
            margin-top:10px;
            color:#3980B2;
            float:left;
            width: 70%;
        }
    }
    @media(max-width:$break-sm){
        .rem-lr-spacing{
            margin-left: 0px;
            margin-right: 0px;
        }
        .guttor-width{
            margin-left:2px;
            margin-right:2px;
        }
    }
}


/* Tooltip container */
.orion_tooltip {
    outline:none; 
    position: relative;
    background-image:url(#{$imagesFolder}orion/info.png);
    //background-image:url("Assets/src/img/orion/info.png");
    background-repeat: no-repeat;
    background-position: center center;
    display: inline-block;
    height:20px;
    width:20px;
    margin-left:10px;
    &:hover {text-decoration:none;} 
    .Tooltip-window {
      z-index:10;
      display:none; 
      padding:10px;
      width:100vw;
      min-width:200px;
      @media(min-width:$break-md){ 
        max-width: 400px;
        font-size:16px!important;
        padding:20px;
        line-height:20px;
      }
      max-width:200px;
      border-radius: 5px;
      font-size:12px!important;
      font-weight:400;
      line-height:16px;
      }
      
    &:hover .Tooltip-window {
        display:block;
        position:absolute;
        bottom: 30px;
        left: 50%;
        color:#fff;  
        background:#414042;        
        transform: translateX(-50%);
        &:after{
            content: "";
            position: absolute;
            top: 100%;
            left: 50%;
            margin-left: -10px;
            border-width: 10px;
            border-style: solid;
            border-color: #414042 transparent transparent transparent;
        } 
        a{
            @media(min-width:$break-md){ 
                font-size:16px!important;
            }
            font-size:12px;
            &:after{
            content:none;
            
            }
        }
    }
	
	&.tooltip_pointer_left{
	    &:hover .Tooltip-window{
	        left: 90%;
	        transform: translateX(-13%);
	        &:after{
                margin-left: -7px;
	            left: 10%;  
	        } 
	    }
	}
	
	&.tooltip_pointer_right {
        &:hover .Tooltip-window{
            left: 10%;
            transform: translateX(-87%);
            &:after{
                margin-left: -14px;
                left: 90%;  
            } 
        }
    }
    &.tooltip_pointer_bottom{
	    &:hover .Tooltip-window{
            bottom:auto;            
	        top: 30px;
	        &:after{
                transform: rotate(180deg);
                top: -20px;
                border-width: 10px;
                border-style: solid;
                border-color: #414042 transparent transparent transparent;
                  
	        } 
	    }
    }
   /* &.tooltip_pointer_top{
	    &:hover .Tooltip-window{            
	        bottom: 30px;
	        &:after{
	            top: 100%;  
	        } 
	    }
	}  */ 

    .tooltip_table{
        border-collapse: collapse;
        color:#fff;
        font-size:14px;
        padding: 10px;
        background:none;
        text-align:left;
        th,td{
            border-collapse: collapse;
            color:#fff;
            font-size:14px;
            padding: 10px;
            background:none;
            text-align:left;
        }
        th{
            border-bottom: 1px solid #1A98FF;                            
            font-weight:700;
        }
        td{
            border-bottom: 1px solid #75777A;
        }
    }
}

